[project]
name = "yang2pydantic"
version = "0.1.0"
description = "Download YANG models from Network Devices and convert them into Pydantic models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "check-jsonschema>=0.36.0",
    "datamodel-code-generator[debug]>=0.53.0",
    "ncclient>=0.7.0",
    "pyang>=2.7.1",
    "pydantic>=2.12.5",
]
